--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -333,6 +333,31 @@
             }
         },
         {
+            "name": "Copy OpenSearch single Landsat8 (stac item)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.1/Stars.dll",
+            "args": [
+                "copy",
+                "-v",
+                "https://terradue-stac.gitlab.io/landsat-8-l1/098/085/LC80980852020009/LC80980852020009.json",
+                "-r",
+                "4",
+                "-sa",
+                "--output",
+                "/tmp/charter2"
+            ],
+           "cwd": "${workspaceFolder}/src",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false,
+            "logging": {
+                "moduleLoad": false
+            }
+        },
+        {
             "name": "Copy OpenSearch single Sentinel1 GRD",
             "type": "coreclr",
             "request": "launch",
