--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -248,6 +248,7 @@
                 "https://catalog.terradue.com/sentinel3/search?format=atom&uid=S3B_SR_2_LAN____20190404T224853_20190404T233910_20190430T202207_3016_024_015______LN3_O_NT_003",
                 "-r",
                 "4",
+                "--harvest",
                 "--output",
                 "../tmp/stars",
                 "--allow-ordering"
