--- a/src/Stars.Console/Terradue.Stars.Console.csproj
+++ b/src/Stars.Console/Terradue.Stars.Console.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>0.5.40</Version>
+    <Version>0.5.41</Version>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <AssemblyName>Stars</AssemblyName>
@@ -40,7 +40,7 @@
     <RpmDotNetDependency Include="libunwind" Version=""/>
     <RpmDotNetDependency Include="libicu" Version=""/>
   </ItemGroup>
-  <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('rhel-x64')) OR $(RuntimeIdentifier.StartsWith('rhel')) OR $(RuntimeIdentifier.StartsWith('fedora'))">
+  <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('rhel-x64')) OR $(RuntimeIdentifier.StartsWith('fedora'))">
     <RpmDotNetDependency Include="compat-openssl10" Version=""/>
   </ItemGroup>
   <ItemGroup Condition="$(RuntimeIdentifier.StartsWith('ol'))">
