--- a/src/Stars.Console/Terradue.Stars.Console.csproj
+++ b/src/Stars.Console/Terradue.Stars.Console.csproj
@@ -8,8 +8,6 @@
     <AssemblyName>Stars</AssemblyName>
     <UserSecretsId>f195eead-6dad-49d2-ad76-d9dbf6662371</UserSecretsId>
     <RuntimeIdentifiers>win7-x64;win10-x64;osx-x64;linux-x64;debian.8-x64;debian.9-x64;ubuntu.19.04-x64;ubuntu.18.04-x64;ubuntu.16.04-x64;ubuntu.14.04-x64;opensuse.42.3-x64;ol.7-x64;rhel.6-x64;rhel-x64;fedora.27-x64;fedora.28-x64;centos.7-x64</RuntimeIdentifiers>
-    <!-- <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch> -->
-    <!-- <NoWarn>NU1603</NoWarn> -->
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest">
@@ -27,6 +25,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.9"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9"/>
     <PackageReference Include="YamlDotNet" Version="8.1.2"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.9"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj"/>
