--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -536,14 +536,18 @@
             "args": [
                 "copy",
                 "-v",
-                "https://catalog.terradue.com//sentinel1/series/GRD/search?format=atomeop&uid=S1A_IW_GRDH_1SSH_20201004T173230_20201004T173247_034649_04090D_F0B5",
+                "file:///home/emathot/charter",
                 "-r",
                 "4",
                 "-xa",
                 "false",
                 "--output",
-                "s3://sentinel-1/"
+                "s3://processing-results/"
             ],
+            "env": {
+                "AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
+                "AWS__Profile": "minio"
+            },
             "cwd": "${workspaceFolder}/src",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
