--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -544,12 +544,10 @@
                 "--output",
                 "s3://sentinel-1/testmanu"
             ],
-            // "env": {
-            //     "AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
-            //     "AWS__Profile": "minio",
-            //     "AWS__Region": "fr-par",
-            //     "AWS__AuthenticationRegion": "fr-par",
-            // },
+            "env": {
+                "AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
+                "AWS__Profile": "minio"
+            },
             "cwd": "${workspaceFolder}/src",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
