--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -536,13 +536,15 @@
             "args": [
                 "copy",
                 "-v",
-                "file:///home/emathot/charter",
+                "file:///home/emathot/charter/activations",
                 "-r",
                 "4",
                 "-xa",
                 "false",
                 "--output",
-                "s3://sentinel-1/testmanu"
+                "s3://sentinel-1/testmanu",
+                "-uf",
+                "workflow.res"
             ],
             "env": {
                 "AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
