result file in json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -543,7 +543,7 @@
                 "false",
                 "--output",
                 "s3://sentinel-1/testmanu",
-                "-uf",
+                "-res",
                 "workflow.res"
             ],
             "env": {
