--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -3,19 +3,20 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Title>Terradue.Stars</Title>
     <Description>Stars is a set of services for working with Spatio Temporal Catalog such as STAC but not only</Description>
-    <Version>0.5.69</Version>
+    <Version>0.5.70</Version>
     <AssemblyName>Terradue.Stars.Services</AssemblyName>
     <PackageId>Terradue.Stars</PackageId>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>STAC;OpenSearch;Terradue;Geo;Json</PackageTags>
     <PackageIcon>Stars_logo.png</PackageIcon>
-    <IncludeSymbols>true</IncludeSymbols>
     <RepositoryType>Git</RepositoryType>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
     <Authors>emmanuelmathot</Authors>
     <RepositoryUrl>https://github.com/Terradue/Stars</RepositoryUrl>
     <Copyright>Copyright (c) 2010-2020 by Terradue</Copyright>
     <Company>Terradue</Company>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9"/>
