--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Title>Terradue.Stars</Title>
     <Description>Stars is a set of services for working with Spatio Temporal Catalog such as STAC but not only</Description>
-    <Version>0.5.70</Version>
+    <Version>0.5.71</Version>
     <AssemblyName>Terradue.Stars.Services</AssemblyName>
     <PackageId>Terradue.Stars</PackageId>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -29,12 +29,12 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
     <PackageReference Include="MimeTypes" Version="2.0.2"/>
     <PackageReference Include="DotNetZip" Version="1.15.0"/>
-    <!-- <PackageReference Include="S3.System.Net" Version="0.1.1"/> -->
+    <PackageReference Include="S3.System.Net" Version="0.1.2"/>
   </ItemGroup>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference Include="../../../../../../Private/Projects/S3WebRequest/System.Net.S3/System.Net.S3.csproj">
     </ProjectReference>
-  </ItemGroup>
+  </ItemGroup> -->
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
