--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -30,11 +30,8 @@
     <PackageReference Include="MimeTypes" Version="2.0.2"/>
     <PackageReference Include="DotNetZip" Version="1.15.0"/>
     <PackageReference Include="S3.System.Net" Version="0.1.3"/>
+    <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7"/>
   </ItemGroup>
-  <!-- <ItemGroup>
-    <ProjectReference Include="../../../../../../Private/Projects/S3WebRequest/System.Net.S3/System.Net.S3.csproj">
-    </ProjectReference>
-  </ItemGroup> -->
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
