--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -416,12 +416,12 @@
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.1/Stars.dll",
             "args": [
-                "-v",
                 "copy",
                 "https://catalog.terradue.com/sentinel2/search?uid=S2A_MSIL2A_20201009T095041_N0214_R079_T33SVB_20201009T121025&do=terradue",
+                "-v",
                 "-r",
                 "4",
-                "--output-dir",
+                "--output",
                 "/tmp/stars"
             ],
             "cwd": "${workspaceFolder}/src",
