--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -23,14 +23,17 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9"/>
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
-    <PackageReference Include="DotNetStac" Version="0.5.10"/>
+    <PackageReference Include="DotNetStac" Version="0.6.0"/>
     <PackageReference Include="Html2Markdown" Version="3.3.1.407"/>
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7"/>
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
     <PackageReference Include="MimeTypes" Version="2.0.2"/>
     <PackageReference Include="DotNetZip" Version="1.15.0"/>
-    <PackageReference Include="S3.System.Net" Version="0.1.3"/>
+    <!-- <PackageReference Include="S3.System.Net" Version="0.1.3"/> -->
     <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../../../../../Private/Projects/S3WebRequest/System.Net.S3/System.Net.S3.csproj" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
