--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -29,12 +29,12 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
     <PackageReference Include="MimeTypes" Version="2.0.2"/>
     <PackageReference Include="DotNetZip" Version="1.15.0"/>
-    <!-- <PackageReference Include="S3.System.Net" Version="0.1.3"/> -->
+    <PackageReference Include="S3.System.Net" Version="0.1.3"/>
     <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7"/>
   </ItemGroup>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference Include="../../../../../../Private/Projects/S3WebRequest/System.Net.S3/System.Net.S3.csproj" />
-  </ItemGroup>
+  </ItemGroup> -->
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
