--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
-    <PackageReference Include="DotNetStac" Version="0.6.0"/>
+    <PackageReference Include="DotNetStac" Version="0.6.1"/>
   </ItemGroup>
+  <!-- <ItemGroup>
+    <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
+  </ItemGroup> -->
 </Project>
