--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -536,17 +536,23 @@
             "args": [
                 "copy",
                 "-v",
-                "file:///home/emathot/s3up/catalog.json",
+                "file:///home/emathot/charter/calls/call-818/acquisitions/catalog.json",
                 "-r",
                 "4",
                 "-rel",
                 "--output",
-                // "s3://processing-results/wf-sar-calibration-s1-rep"
+                // "s3://processing-results/wf-sar-calibration-s1-manu"
+                // "s3://processing_results/"
                 "s3://fe994dc67fb44e118433b19fd2e01232:dev_user_001_container_002"
             ],
             "env": {
                 "AWS__ServiceURL": "https://cf2.cloudferro.com:8080",
-                "AWS__Profile": "creodiasowner",
+                "AWS__Profile": "richardconway",
+                "AWS__SignatureVersion": "2",
+                // "AWS__ServiceURL": "https://cf2.cloudferro.com:8080",
+                // "AWS__Profile": "creodiasowner",
+                // "AWS__SignatureVersion": "2",
+                // "AWS__Region": "RegionOne"
                 // "AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
                 // "AWS__Profile": "minio"
             },
