--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
-    <PackageReference Include="DotNetStac" Version="0.6.2"/>
+    <!-- <PackageReference Include="DotNetStac" Version="0.6.2"/> -->
   </ItemGroup>
-  <!-- <ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
-  </ItemGroup> -->
+  </ItemGroup>
 </Project>
