--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -3,7 +3,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Title>Terradue.Stars</Title>
     <Description>Stars is a set of services for working with Spatio Temporal Catalog such as STAC but not only</Description>
-    <Version>0.6.20</Version>
+    <Version>1.0.0</Version>
+    <VersionSuffix>beta.1</VersionSuffix>
     <AssemblyName>Terradue.Stars.Services</AssemblyName>
     <PackageId>Terradue.Stars</PackageId>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -17,13 +18,14 @@
     <Company>Terradue</Company>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9"/>
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
-    <!-- <PackageReference Include="DotNetStac" Version="0.6.2"/> -->
+    <PackageReference Include="DotNetStac" Version="0.7.0"/>
     <PackageReference Include="Html2Markdown" Version="3.3.1.407"/>
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7"/>
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
@@ -33,7 +35,7 @@
     <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
+    <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
     <!-- <ProjectReference Include="../../../../../../Private/Projects/S3WebRequest/System.Net.S3/System.Net.S3.csproj" /> -->
   </ItemGroup>
   <ItemGroup>
