--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -21,9 +21,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.9" />
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
     <PackageReference Include="DotNetStac" Version="0.6.2"/>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.5" />
     <PackageReference Include="Html2Markdown" Version="3.3.1.407"/>
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7"/>
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
