--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -21,19 +21,20 @@
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9"/>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.9" />
-    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
-    <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
-    <PackageReference Include="DotNetStac" Version="0.8.0"/>
-    <PackageReference Include="Html2Markdown" Version="3.3.1.407"/>
-    <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7"/>
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0"/>
-    <PackageReference Include="MimeTypes" Version="2.0.2"/>
-    <PackageReference Include="DotNetZip" Version="1.15.0"/>
-    <PackageReference Include="S3.System.Net" Version="0.2.1"/>
-    <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7"/>
+    <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
+    <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0" />
+    <PackageReference Include="DotNetStac" Version="0.8.0" />
+    <PackageReference Include="Html2Markdown" Version="3.3.1.407" />
+    <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+    <PackageReference Include="MimeTypes" Version="2.0.2" />
+    <PackageReference Include="DotNetZip" Version="1.15.0" />
+    <PackageReference Include="S3.System.Net" Version="0.2.1" />
+    <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
@@ -60,12 +61,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
-    <None Include="..\..\docs\logo\Stars_logo.png" Pack="true" PackagePath=""/>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
+    <None Include="..\..\docs\logo\Stars_logo.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
     <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))"/>
+      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
     </ItemGroup>
   </Target>
 </Project>
