--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
-    <PackageReference Include="DotNetStac" Version="0.9.0"/>
+    <PackageReference Include="DotNetStac" Version="1.0.0-rc.2"/>
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
