--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -537,25 +537,26 @@
             "args": [
                 "copy",
                 "-v",
-                "file:///home/emathot/charter/calls/call-818/acquisitions/catalog.json",
+                "/home/emathot/charter/calls/call-100/acquisitions",
                 "-r",
                 "4",
                 "-rel",
                 "--output",
+                // "/tmp"
                 // "s3://processing-results/wf-sar-calibration-s1-manu"
-                // "s3://processing_results/"
-                "s3://fe994dc67fb44e118433b19fd2e01232:dev_user_001_container_002"
+                "s3://processing_results/testmanu"
+                // "s3://fe994dc67fb44e118433b19fd2e01232:dev_user_001_container_002"
             ],
             "env": {
-                "AWS__ServiceURL": "https://cf2.cloudferro.com:8080",
-                "AWS__Profile": "richardconway",
-                "AWS__SignatureVersion": "2",
+                // "AWS__ServiceURL": "https://cf2.cloudferro.com:8080",
+                // "AWS__Profile": "richardconway",
+                // "AWS__SignatureVersion": "2",
                 // "AWS__ServiceURL": "https://cf2.cloudferro.com:8080",
                 // "AWS__Profile": "creodiasowner",
                 // "AWS__SignatureVersion": "2",
                 // "AWS__Region": "RegionOne"
-                // "AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
-                // "AWS__Profile": "minio"
+                "STARS_AWS__ServiceURL": "https://api.charter.uat.esaportal.eu",
+                "STARS_AWS__Profile": "minio"
             },
             "cwd": "${workspaceFolder}/src",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
