asset filtered fixed in item

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -619,7 +619,32 @@
                 "moduleLoad": false
             }
         },
-        
+        {
+            "name": "Copy calibrated",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.1/Stars.dll",
+            "args": [
+                "copy",
+                "https://supervisor.charter.uat.esaportal.eu/catalog/calls/call-100/calibratedDatasets/S2A_MSIL1C_20200615T060641_N0209_R134_T45WWS_20200615T080720-calibrated/S2A_MSIL1C_20200615T060641_N0209_R134_T45WWS_20200615T080720-calibrated.json",
+                "-v",
+                "-af",
+                "red",
+                "-r",
+                "4",
+                "--output",
+                "/tmp/charter"
+            ],
+            "cwd": "${workspaceFolder}/src",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false,
+            "logging": {
+                "moduleLoad": false
+            }
+        },
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
