--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.9" />
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0" />
-    <PackageReference Include="DotNetStac" Version="1.1.0" />
+    <!-- <PackageReference Include="DotNetStac" Version="1.1.0" /> -->
     <PackageReference Include="Html2Markdown" Version="3.3.1.407" />
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
@@ -38,7 +38,7 @@
     <PackageReference Include="DistributedLock.FileSystem"  Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
+    <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
     <!-- <ProjectReference Include="../../../../../../Private/Projects/S3WebRequest/System.Net.S3/System.Net.S3.csproj" /> -->
   </ItemGroup>
   <ItemGroup>
