--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -33,7 +33,7 @@
     <PackageReference Include="MimeTypes" Version="2.0.2" />
     <PackageReference Include="DotNetZip" Version="1.15.0" />
     <PackageReference Include="S3.System.Net" Version="0.2.1" />
-    <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
+    <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
   </ItemGroup>
   <ItemGroup>
