--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -626,18 +626,21 @@
             "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.1/Stars.dll",
             "args": [
                 "copy",
-                "https://supervisor.charter.uat.esaportal.eu/catalog/calls/call-857/acquisitions/857-ALSAT1B-ORTHO-AB0009e5_001_BUN_L1T-AB0009e5_001_MUL_L1T/857-ALSAT1B-ORTHO-AB0009e5_001_BUN_L1T-AB0009e5_001_MUL_L1T.json",
+                "s3://test-assets/test/vrss/857-ALSAT1B-ORTHO-AB0009e5_001_BUN_L1T-AB0009e5_001_MUL_L1T.json",
                 "-v",
                 "-r",
                 "4",
+                "-xa",
+                "false",
                 "--output",
-                "/tmp/charter"
+                "s3://test-assets/test/vrss2"
             ],
             "cwd": "${workspaceFolder}/src",
             "env": {
-                "AWS_ACCESS_KEY_ID": "minioadmin",
-                "AWS_SECRET_ACCESS_KEY": "minioadmin",
-                "AWS__ServiceURL": "https://minio.charter.uat.esaportal.eu"
+                "AWS__Profile": "scw",
+                "AWS__ServiceURL": "https://s3.fr-par.scw.cloud",
+                "AWS__Region": "fr-par",
+                "AWS__AuthenticationRegion": "fr-par",
             },
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
