--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -626,13 +626,14 @@
             "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/netcoreapp3.1/Stars.dll",
             "args": [
                 "copy",
-                "s3://cpe-production-catalog/calls/call-841/datasets/S2B_MSIL1C_20210329T100609_N0209_R022_T31NCG_20210329T135236/S2B_MSIL1C_20210329T100609_N0209_R022_T31NCG_20210329T135236.json",
+                "file:///tmp/charter/841-CNES-PLEIADES_1A-urn_ogc_def_EOP_PHR_1A_DS_PHR1A_202109071022088_FR1_PX_E001N06_0816_06110.json",
                 "-v",
                 "-r",
                 "4",
-                "-rel",
+                "-aa",
+                // "-rel",
                 "--output",
-                "/tmp/charter"
+                "s3://cpe-production-catalog/test/841-CNES-PLEIADES_1A-urn_ogc_def_EOP_PHR_1A_DS_PHR1A_202109071022088_FR1_PX_E001N06_0816_06110/"
             ],
             "cwd": "${workspaceFolder}/src",
             "env": {
