--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -5,7 +5,7 @@
     <!-- <NoWarn>NU1603</NoWarn> -->
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.*" />
     <PackageReference Include="DotNetStac" Version="1.1.*" />
   </ItemGroup>
   <ItemGroup>
